feat(build): build da primeira versão do produto